# bazel-go

./: .bazelignore  .gitignore  BUILD.bazel  README.md  WORKSPACE  bazel-bin  bazel-out  bazel-testlogs  deps.bzl  go.mod  licenserc.toml
cmd/hello/: BUILD.bazel  main.go
pkg/hello/: BUILD.bazel  hello_test.go
pkg/hi/api/: BUILD.bazel  hi.proto
