load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "hello_lib",
    srcs = ["main.go"],
    importpath = "github.com/crrow/bazel-go/cmd/hello",
    visibility = ["//visibility:private"],
    deps = ["@com_github_urfave_cli_v2//:cli"],
)

go_binary(
    name = "hello",
    embed = [":hello_lib"],
    visibility = ["//visibility:public"],
)
